argocd-app-of-apps/cluster/irish-sea/site-quaker-kr-de/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "quaker-kr-de"
  labels:
    app: "quaker-kr-de"
spec:
  type: ClusterIP
  selector:
    app: "quaker-kr-de"
  ports:
    - targetPort: 8080
      port: 8080
