argocd-app-of-apps/cluster/irish-sea/site-quaker-kr-de/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-quaker-kr-de-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    # - match:              Host(`quaker-kr.de`) && PathPrefix(`/`)
    - match: Host(`test.quaker-kr.de`)
      kind: Rule
      services:
        - name: quaker-kr-de
          port: 80
  tls:
    secretName: quaker-kr-de

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: quaker-kr-de
spec:
  redirectScheme:
    scheme: https
    permanent: true
